Fixed: Drop-down menu hidden behind main tabs #34

--- a/octoprint_uicustomizer/static/css/uicustomizer.css
+++ b/octoprint_uicustomizer/static/css/uicustomizer.css
@@ -111,6 +111,12 @@
     }
 }
 
+/* fix popovers*/
+
+#navbar.navbar-static-top{
+    position: relative;
+}
+
 body.UICfixedFooter{
 	margin-bottom: 45px;
 }
